--- a/_posts/Tutorials/2021-04-20-supermassive-black-hole-tutorial.html
+++ b/_posts/Tutorials/2021-04-20-supermassive-black-hole-tutorial.html
@@ -6,7 +6,7 @@ blurb: In this tutorial I will walk you through the individual components and pr
 preview-video: assets/posts/tutorials/supermassive-black-hole-tutorial/SMBH_11.mp4
 ---
 
-<div class="video__container round gif">
+<div class="container video__container round gif">
     <video src="/assets/posts/tutorials/supermassive-black-hole-tutorial/SMBH_11.mp4" autoplay muted loop></video>
 </div>
 
@@ -496,7 +496,7 @@ if(samplePos.x < maxFloat)
     uv.y += _Time.x * _DiscSpeed;
 }</code></pre>
 </div>
-<div class="video__container round gif">
+<div class="container video__container round gif">
     <video src="/assets/posts/tutorials/supermassive-black-hole-tutorial/SMBH_07.mp4" autoplay muted loop></video>
     <div class="caption__text round">
         Animation of our texture rotating, disc speed set to 2
@@ -635,7 +635,7 @@ transmittance *= texCol * _DiscColor.a;
 float3 col = lerp(backgroundCol, discCol, transmittance);
 return float4(col,1);</code></pre>
 </div>
-<div class="video__container round gif">
+<div class="container video__container round gif margin--vertical">
     <video src="/assets/posts/tutorials/supermassive-black-hole-tutorial/SMBH_08.mp4" autoplay muted loop></video>
     <div class="caption__text round">
         Rotating accretion disc with hue and intensity shifts.
@@ -789,7 +789,7 @@ if(outerSphereIntersection.x < maxFloat)
         currentRayDir = normalize(currentRayDir + dirToCentre * force * _StepSize);</code></pre>
 </div>
 <p>If you look closely at the resulting image below, you’ll notice that there is also an inner ring just outside the black hole. This ring actually consists of rays that have orbited the black hole and collided with the disc from the other side, notice how the inner ring is brighter on the right instead of the left.</p>
-<div class="video__container round gif">
+<div class="container video__container round gif">
     <video src="/assets/posts/tutorials/supermassive-black-hole-tutorial/SMBH_10.mp4" autoplay muted loop></video>
     <div class="caption__text round">
         Gravity is bending our rays around the black hole, even creating secondary rings similar to the photon ring. Inner radius set to 0.15, _SSRadius set to 0.02.
@@ -822,7 +822,7 @@ distortedScreenUV = lerp(screenUV, distortedScreenUV, t);
     
 float3 backgroundCol = SampleSceneColor(distortedScreenUV) * (1 - blackHoleMask);</code></pre>
 </div>
-<div class="video__container round gif">
+<div class="container video__container round gif">
     <video src="/assets/posts/tutorials/supermassive-black-hole-tutorial/SMBH_11.mp4" autoplay muted loop></video>
     <div class="caption__text round">
         The complete image of our black hole with warping the space around it
