--- a/Games/index.html
+++ b/Games/index.html
@@ -1,5 +1,19 @@
 ---
 title: Games
 layout: default
-<!-- nav-menu: 0 -->
+nav-menu: 0
 ---
+
+
+<div class="style1">
+    <h1>Style Test</h1>
+    <p><em>This is a style test text, with this first line being an emphasised line to make sure you read it.</em></p>
+    <p>In this block I'll use several links, like <a href="">this one</a> or <a href="">this one</a>, but they go no where. Besides links we also have keywords, such as <b>functions</b> or <b>variables</b>. In a tutorial you  could expect something like, change <b>stepSize</b> in the <b>Fragment</b> function. If we want we could also distinguish between links that go to another <a href="">page</a> or <a href="">site</a>, and links that refer to <a class="a--local" href="">sections</a> within the page. I'm not sure yet if I want names, of people or models, to be bold or italic. It would either be <b>Lambert model</b> or the <em>Lambert model</em>. Another question is how combinations worked, like a named link such as check out <em><a href="">Kelvin</a></em>. Something else I haven't used but is quite cool are <span class="tooltip" rel="tooltip" title="I'm using dotted lines again here, so maybe don't have local links be different">tooltips</span>.</p>
+
+
+
+<div class="note__base round">
+    <p><em>This is the same text as above but now in a note block in which interesting things are told.</em></p>
+    <p>In this block I'll use several links, like <a href="">this one</a> or <a href="">this one</a>, but they go no where. Besides links we also have keywords, such as <b>functions</b> or <b>variables</b>. In a tutorial you  could expect something like, change <b>stepSize</b> in the <b>Fragment</b> function. If we want we could also distinguish between links that go to another <a href="">page</a> or <a href="">site</a>, and links that refer to <a class="a--local" href="">sections</a> within the page. I'm not sure yet if I want names, of people or models, to be bold or italic. It would either be <b>Lambert model</b> or the <em>Lambert model</em>. Another question is how combinations worked, like a named link such as check out <em><a href="">Kelvin</a></em>. Something else I haven't used but is quite cool are <span class="tooltip" rel="tooltip" title="I'm using dotted lines again here, so maybe don't have local links be different">tooltips</span>.</p>
+</div>
+</div>
