--- a/Tutorials/index.html
+++ b/Tutorials/index.html
@@ -3,10 +3,10 @@ title: Tutorials
 layout: default
 nav-menu: 2
 previewCategory: tutorial
-previewPostsPerPage: 3
+previewPostsPerPage: 6
 ---
 
-<p>In these tutorials I will teach you how to recreate some of my shaders, as well as some techniques and mathematics that are useful for shaders. Currently all tutorials are written in HLSL or made with Shader Graph. While they are made in Unity URP, the concepts and most of the HLSL code should work in other environments as well.</p>
+<p>In these tutorials I will teach you how to recreate some of my shaders, as well as some techniques and mathematics that are useful for shaders. Currently all tutorials are written in HLSL or made with <em>Shader Graph</em>. While they are made in <em>Unity</em> URP, the concepts and most of the HLSL code should work in other environments as well.</p>
 
 <div class="grid-full" id="postPreviewGrid"></div>
 
