Modal images better fit the screen. Underlines removed from contact buttons.

--- a/Contact/index.html
+++ b/Contact/index.html
@@ -7,32 +7,32 @@ nav-menu: 3
 <p>The easiest way of contacting me is through either <a href="https://twitter.com/KelvinvanHoorn" target="_blank">twitter</a> or emailing me at <a href="mailto:kelvinvanhoorn@outlook.com">kelvinvanhoorn@outlook.com</a>. Otherwise you can find me on these socials:</p>
 
 <div class="social__container--extended">
-    <a href="mailto:kelvinvanhoorn@outlook.com">
+    <a href="mailto:kelvinvanhoorn@outlook.com" style="text-decoration: none;">
         <i class="fas fa-envelope" style="vertical-align:text-bottom;"></i> kelvinvanhoorn@outlook.com
     </a>
 </div>
 <div class="social__container--extended">
-    <a href="https://twitter.com/KelvinvanHoorn" target="_blank">
+    <a href="https://twitter.com/KelvinvanHoorn" target="_blank" style="text-decoration: none;">
         <i class="fab fa-twitter" style="vertical-align:text-bottom;"></i> @KelvinvanHoorn
     </a>
 </div>
 <div class="social__container--extended">
-    <a href="https://www.reddit.com/user/Radagasd" target="_blank">
+    <a href="https://www.reddit.com/user/Radagasd" target="_blank" style="text-decoration: none;">
         <i class="fab fa-reddit-alien" style="vertical-align:text-bottom;"></i> u/Radagasd
     </a>
 </div>
 <div class="social__container--extended">
-    <a href="https://www.github.com/Radagasd" target="_blank">
+    <a href="https://www.github.com/Radagasd" target="_blank" style="text-decoration: none;">
         <i class="fab fa-github" style="vertical-align:text-bottom;"></i> Radagasd
     </a>
 </div>
 <div class="social__container--extended">
-    <a href="https://www.linkedin.com/in/kelvin-van-hoorn" target="_blank">
+    <a href="https://www.linkedin.com/in/kelvin-van-hoorn" target="_blank" style="text-decoration: none;">
         <i class="fab fa-linkedin-in" style="vertical-align:text-bottom;"></i> Kelvin van Hoorn
     </a>
 </div>
 <div class="social__container--extended">
-    <a href="https://radagasd.itch.io/" target="_blank">
+    <a href="https://radagasd.itch.io/" target="_blank" style="text-decoration: none;">
         <i class="fab fa-itch-io" style="vertical-align:text-bottom;"></i> Radagasd
     </a>
 </div>
