--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ nav-menu: -1
         <!-- <p style="font-size: 2rem; font-weight: bold;">Hi, I’m Kelvin van Hoorn, a technical artist that employs his background in applied physics to create stylised art.<p> -->
         <p style="font-size: 2rem; font-weight: bold;">Hi, I’m Kelvin van Hoorn, a technical artist that loves to apply his knowledge of physics to making (compute) shaders, VFX, and anything else related to art.<p>
         <p>I’m a graduated MSc. of Applied Physics, and in my spare time I taught myself to write shaders through online tutorials, experimentation and art challenges. I enjoy working on stylised projects the most, because it forces me to look extra carefully at what I’m trying to achieve and only implement the essential parts.</p>
-        <p>Below you can see a small collection of the things I’ve created, but be sure to check the <a href="{{ site.baseurl }}/Showcases">Showcases</a> and <a href="{{ site.baseurl }}/tutorials">Tutorials</a> pages for more technical art content.</p>
+        <p>Below you can see a small collection of the things I’ve created, but be sure to check the <a href="{{ site.baseurl }}/Showcases">Showcases</a> and <a href="{{ site.baseurl }}/Tutorials">Tutorials</a> pages for more technical art content.</p>
         <p>Want to know more? Interested in my work? Message me on <a href="https://twitter.com/KelvinvanHoorn" target="_blank">twitter</a>, or contact me at <a href="mailto:kelvinvanhoorn@outlook.com">kelvinvanhoorn@outlook.com</a>!</p>
     </div>
     <div class="container image__container round">
