--- a/_posts/Tutorials/2021-05-11-math-line-intersections.html
+++ b/_posts/Tutorials/2021-05-11-math-line-intersections.html
@@ -2,7 +2,7 @@
 title: "Math: line intersections"
 layout: post
 category: tutorial
-blurb: This tutorial will teach you how to find the intersections between a 3D line and several shapes. It is primarily about the math and its HLSL implementation.
+description: This tutorial will teach you how to find the intersections between a 3D line and several shapes. It is primarily about the math and its HLSL implementation.
 preview-video: assets/posts/tutorials/math-line-intersections/preview.mp4
 ---
 
