--- a/_posts/Tutorials/2021-11-02-shadow-outlines-tutorial.html
+++ b/_posts/Tutorials/2021-11-02-shadow-outlines-tutorial.html
@@ -2,7 +2,7 @@
 title: Shadow outlines tutorial
 layout: post
 category: tutorial
-blurb: In this tutorial I will show you how to sample the shadow map of the main light, make a Lambert based toon lighting model and draw outlines around the shadows.
+description: In this tutorial I will show you how to sample the shadow map of the main light, make a Lambert based toon lighting model and draw outlines around the shadows.
 preview-video: assets/posts/tutorials/shadow-outlines-tutorial/preview.mp4
 ---
 
