--- a/_posts/Tutorials/2021-05-20-paper-lanterns.html
+++ b/_posts/Tutorials/2021-05-20-paper-lanterns.html
@@ -2,7 +2,7 @@
 title: Paper lanterns tutorial
 layout: post
 category: tutorial
-blurb: This is a small shader graph tutorial on how to recreate my Paper Lantern shader. No modelling is required.
+description: This is a small shader graph tutorial on how to recreate my Paper Lantern shader. No modelling is required.
 preview-video: assets/posts/tutorials/paper-lanterns/preview.mp4
 ---
 
