--- a/_posts/Tutorials/2021-11-02-shadow-outlines-tutorial.html
+++ b/_posts/Tutorials/2021-11-02-shadow-outlines-tutorial.html
@@ -4,6 +4,7 @@ layout: post
 category: tutorial
 description: In this tutorial I will show you how to sample the shadow map of the main light, make a Lambert based toon lighting model and draw outlines around the shadows.
 preview-video: assets/posts/tutorials/shadow-outlines-tutorial/preview.mp4
+image: /assets/posts/tutorials/shadow-outlines-tutorial/ShadowOutlines_Sobel_04.jpg
 ---
 
 <div class="video__container round gif">
