--- a/_posts/Tutorials/2021-04-20-supermassive-black-hole-tutorial.html
+++ b/_posts/Tutorials/2021-04-20-supermassive-black-hole-tutorial.html
@@ -2,7 +2,7 @@
 title: "Supermassive black hole tutorial"
 layout: post
 category: tutorial
-description: In this tutorial I will walk you through the individual components and process of recreating my SMBH shader. It combines raymarching and the law of gravity to simulate the iconic visualisation of black holes.
+blurb: In this tutorial I will walk you through the individual components and process of recreating my SMBH shader. It combines raymarching and the law of gravity to simulate the iconic visualisation of black holes.
 preview-video: assets/posts/tutorials/supermassive-black-hole-tutorial/SMBH_11.mp4
 ---
 
