--- a/_posts/Tutorials/2021-05-20-paper-lanterns.html
+++ b/_posts/Tutorials/2021-05-20-paper-lanterns.html
@@ -4,6 +4,7 @@ layout: post
 category: tutorial
 blurb: This is a small shader graph tutorial on how to recreate my Paper Lantern shader. No modelling is required.
 preview-video: assets/posts/tutorials/paper-lanterns/preview.mp4
+image: /assets/posts/tutorials/paper-lanterns/preview_still.jpg
 ---
 
 <div class="container video__container round gif">
