--- a/_posts/Tutorials/2021-04-20-supermassive-black-hole-tutorial.html
+++ b/_posts/Tutorials/2021-04-20-supermassive-black-hole-tutorial.html
@@ -4,8 +4,8 @@ layout: post
 category: tutorial
 blurb: In this tutorial I will walk you through the individual components and process of recreating my SMBH shader. It combines raymarching and the law of gravity to simulate the iconic visualisation of black holes.
 preview-video: assets/posts/tutorials/supermassive-black-hole-tutorial/SMBH_11.mp4
+image: /assets/posts/tutorials/supermassive-black-hole-tutorial/SMBH_FeatureStill_001.png
 ---
-<!-- image: /assets/posts/tutorials/supermassive-black-hole-tutorial/SMBH_FeatureStill_001.png -->
 
 <div class="container video__container round gif">
     <video src="/assets/posts/tutorials/supermassive-black-hole-tutorial/SMBH_11.mp4" autoplay muted loop></video>
