--- a/_posts/Tutorials/2022-03-17-skybox-tutorial-part-1.html
+++ b/_posts/Tutorials/2022-03-17-skybox-tutorial-part-1.html
@@ -4,6 +4,7 @@ layout: post
 category: tutorial
 blurb: This tutorial is the first in a series on creating a skybox. This part will focus on creating the shader that draws the sky, sun, moon and stars.
 preview-video: assets/posts/tutorials/skybox-tutorial-part-1/Preview.mp4
+image: /assets/posts/tutorials/skybox-tutorial-part-1/SkyboxP1_TheStars_Constellation.png
 ---
 
 
