Added Mastodon links and removed twitter as main way of contacting me.

--- a/Contact/index.html
+++ b/Contact/index.html
@@ -4,11 +4,16 @@ layout: default
 nav-menu: 3
 ---
 
-<p>The easiest way of contacting me is through either <a href="https://twitter.com/KelvinvanHoorn" target="_blank">twitter</a> or emailing me at <a href="mailto:kelvinvanhoorn@outlook.com">kelvinvanhoorn@outlook.com</a>. Otherwise you can find me on these socials:</p>
+<p>The easiest way of contacting me is through emailing me at <a href="mailto:kelvinvanhoorn@outlook.com">kelvinvanhoorn@outlook.com</a>. Otherwise you can find me on these socials:</p>
 
 <div class="social__container--extended">
     <a href="mailto:kelvinvanhoorn@outlook.com" style="text-decoration: none;">
         <i class="fas fa-envelope" style="vertical-align:text-bottom;"></i> kelvinvanhoorn@outlook.com
+    </a>
+</div>
+<div class="social__container--extended">
+    <a href="https://mastodon.gamedev.place/@KelvinvanHoorn" target="_blank" style="text-decoration: none;">
+        <i class="fab fa-mastodon" style="vertical-align:text-bottom;"></i> @KelvinvanHoorn
     </a>
 </div>
 <div class="social__container--extended">
