--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ nav-menu: -1
         <p style="font-size: 2rem; line-height: 1em; font-weight: bold;">Hi, I love to apply my knowledge of physics to making (compute) shaders, VFX, and anything else related to art.<p></p>
         <p>I’m a graduated MSc. of Applied Physics, and in my spare time I taught myself to write shaders through online tutorials, experimentation and art challenges. I enjoy working on stylised projects the most, because it forces me to look extra carefully at what I’m trying to achieve and only implement the essential parts.</p>
         <p>Below you can see a small collection of the things I’ve created, but be sure to check the <a href="{{ site.baseurl }}/Showcases">Showcases</a> and <a href="{{ site.baseurl }}/Tutorials">Tutorials</a> pages for more technical art content.</p>
-        <p>Want to know more? Interested in my work? Contact me at <a href="mailto:kelvinvanhoorn@outlook.com">kelvinvanhoorn@outlook.com</a></span></p>
+        <p>Want to know more? Interested in my work? Contact me at <a href="mailto:kelvinvanhoorn@outlook.com">kelvinvanhoorn@outlook.com</a></p>
     </div>
     <div class="container image__container round">
-        <img src="/assets/pages/home/passport.jpg" alt="My face" class="portrait round">
+        <img src="/assets/pages/home/Portrait.jpg" alt="A picture of my face." class="portrait round">
     </div>
 </div>
 
