Added video_local to preview lists

--- a/_posts/Tutorials/2022-03-17-skybox-tutorial-part-1.html
+++ b/_posts/Tutorials/2022-03-17-skybox-tutorial-part-1.html
@@ -721,7 +721,7 @@ float4 Fragment (v2f IN) : SV_TARGET
 </div>
 
 <div class="container video__container round gif">
-    <video class="video_local" src="/assets/posts/tutorials/skybox-tutorial-part-1/SkyboxP1_TheStars_Rotation.mp4" autoplay muted loop class="innerRound"></video>
+    <video class="video_local" src="/assets/posts/tutorials/skybox-tutorial-part-1/SkyboxP1_TheStars_Rotation.mp4" autoplay muted loop></video>
     <div class="caption__text">
         Animation of the stars at a highly exaggerated speed, you can see Polaris (the North Star) at the top. Latitude is 52° (The Netherlands), speed = 0.01.
     </div>
