Improve rounding of videos

--- a/_posts/Tutorials/2021-05-11-math-line-intersections.html
+++ b/_posts/Tutorials/2021-05-11-math-line-intersections.html
@@ -8,7 +8,7 @@ image: /assets/posts/tutorials/math-line-intersections/Ellipsoid_002.jpg
 ---
 
 <div class="video__container round gif">
-    <video class="video_local" src="/assets/posts/tutorials/math-line-intersections/preview.mp4" autoplay muted loop></video>
+    <video src="/assets/posts/tutorials/math-line-intersections/preview.mp4" autoplay muted loop></video>
 </div>
 
 <p>Lately a lot of my shaders have used a bit of raymarching, where I primarily rely on finding the intersections between a line (ray) and a shape. In this post I will go over the general approach for calculating these intersections and provide a list of <b>HLSL</b> implementations. The shapes discussed here will include planes, quadric surfaces (e.g. a sphere) and some useful combinations of them.</p>
