--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ nav-menu: -1
         <p>Below you can see a small collection of the things I’ve created, but be sure to check the <a href="{{ site.baseurl }}/Showcases">Showcases</a> and <a href="{{ site.baseurl }}/Tutorials">Tutorials</a> pages for more technical art content.</p>
         <p>Want to know more? Interested in my work? Contact me at <a href="mailto:kelvinvanhoorn@outlook.com">kelvinvanhoorn@outlook.com</a></p>
     </div>
-    <!-- <div class="container image__container round"> -->
+    <div class="container image__container round">
         <img src="/assets/pages/home/Portrait.jpg" alt="A picture of my face." class="portrait innerRound">
-    <!-- </div> -->
+    </div>
 </div>
 
 <!-- <hr> -->
