--- a/_posts/Tutorials/2021-05-11-math-line-intersections.html
+++ b/_posts/Tutorials/2021-05-11-math-line-intersections.html
@@ -422,21 +422,21 @@ if(frontIntersection < maxLineDst && frontIntersection >= 0)
 <div class="grid__columns--exactly3 grid__align--top">
     <div class="container image__container round">
         <img src="https://upload.wikimedia.org/wikipedia/commons/3/34/Hyperboloid_Of_One_Sheet_Quadric.png" alt="Hyperbolic hyperboloid" class="image__modal round" style="background-color: white;">
-        <span class="caption__text round">
+        <div class="caption__text round">
             Hyperbolic hyperboloid [<a href="#references">2</a>] <span class="caption__text-mathjax">\(s_t > 0\)</span>
-        </span>
+        </div>
     </div>
     <div class="container image__container round">
         <img src="https://upload.wikimedia.org/wikipedia/commons/a/af/Hyperboloid_Of_Two_Sheets_Quadric.png" alt="Elliptic hyperboloid" class="image__modal round" style="background-color: white;">
-        <span class="caption__text round">
+        <div class="caption__text round">
             Elliptic hyperboloid [<a href="#references">2</a>] <span class="caption__text-mathjax">\(s_t < 0\)</span>
-        </span>
+        </div>
     </div>
     <div class="container image__container round">
         <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Elliptical_Cone_Quadric.Png" alt="Elliptic cone" class="image__modal round" style="background-color: white;">
-        <span class="caption__text round">
+        <div class="caption__text round">
             Elliptic cone [<a href="#references">2</a>] <span class="caption__text-mathjax">\(s_t = 0\)</span>
-        </span>
+        </div>
     </div>
 </div>
 
