--- a/Tutorials/index.html
+++ b/Tutorials/index.html
@@ -8,7 +8,7 @@ previewPostsPerPage: 6
 
 <p>In these tutorials I will show you how to recreate some of my shaders, as well as some techniques and mathematics that are useful for shaders. Currently all tutorials are written in HLSL or made with <em>Shader Graph</em>. While they are made in <em>Unity</em> URP, the concepts and most of the HLSL code should work in other environments as well.</p>
 
-<div class="grid-full" id="postPreviewGrid"></div>
+<div class="grid-fullwidth" id="postPreviewGrid"></div>
 
 <button onclick="increasePageLimit()" id="loadMorePostsBtn" title="load more posts">Load more posts...</button>
 
