More css cleanup and todo comments

--- a/Games/index.html
+++ b/Games/index.html
@@ -4,6 +4,8 @@ layout: default
 <!-- nav-menu: 0 -->
 ---
 
+<!-- TODO: remove page -->
+
 <div class="style1">
     <h1>Style Test</h1>
     <p><em>This is a style test text, with this first line being an emphasised line to make sure you read it.</em></p>
