--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ nav-menu: -1
     <div>
         <p style="font-size: 2rem; line-height: 1em; font-weight: bold;">Hi, I’m Kelvin van Hoorn, an experienced technical artist that loves to make stylised art through shaders, VFX and programming.<p>
         <p>After finishing my Applied Physics Master I decided I wanted to work in the games industry, specfically on the graphical art side. In my spare time I taught myself to write shaders through online tutorials, experimentation and art challenges.</p>
-        <p>Since then I’ve worked at Pixel Toys on a yet unnanounced game as an experienced technical artist. There my resposibilities include shaders, render features, VFX, UI, tools, and optimisng the game the achieve its targets. You could say I’m somewhat of a generalist, I’ll take on any problem.</p>
+        <p>Since then I’ve worked at Pixel Toys on a yet unnanounced game as an experienced technical artist. There my resposibilities include shaders, render features, VFX, UI, tools, and optimisng the game the achieve its performance targets.</p>
         <p>Below you can see a small collection of the things I’ve created on my own, but be sure to check the <a href="{{ site.baseurl }}/Showcases">Showcases</a> and <a href="{{ site.baseurl }}/Tutorials">Tutorials</a> pages for more technical art content.</p>
         <p>Want to know more? Interested in my work? Contact me at <a href="mailto:kelvinvanhoorn@outlook.com">kelvinvanhoorn@outlook.com</a></p>
     </div>
